--- a/index.html
+++ b/index.html
@@ -30,14 +30,18 @@
             </ul>
         </nav>
     </div>
-    <section id="home">
-        <div class='planet-container'>
-            <div class='night'></div>
-            <div class='day'></div>
-            <div class='clouds'></div>
-            <div class='inner-shadow'></div>
-        </div>
-    </section>
+    
+<section id="home">
+    <div class="home-container">
+       <div class="content" id="content">
+           <div class = "typewriter" style = "width: 67%;">
+               <h1>Welcome to the Global Impact Hub</h1>
+   
+           </div>
+     
+   </div>
+    </div>
+   </section>
     <section id="world-analysis">
         <div class="container">
 
