--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <li><a href="#home">Home</a></li>
                 <li><a href="#worldwide-analysis">Worldwide Analysis</a></li>
                 <li><a href="#interactive-map">Interactive Map</a></li>
-                <li><a href="#resources">Resources</a></li>
+                
             </ul>
         </nav>
     </div>
@@ -35,14 +35,14 @@
     <div class="home-container">
        <div class="content" id="content">
            <div class = "typewriter" style = "width: 67%;">
-               <h1>Welcome to the Global Impact Hub</h1>
+               <h1>The Global Impact Hub</h1>
    
            </div>
      
    </div>
     </div>
    </section>
-    <section id="world-analysis">
+    <section id="worldwide-analysis">
         <div class="container">
 
 
@@ -52,7 +52,7 @@
                     <p class="card-title">Zero-cost Possibilities</p>
                     <p class="card-description">Hubble lets users borrow USDH for a one-time 0.5% fee. No variable
                         rates. No interest charged, ever.</p>
-                    <img src="home.jpg" alt="" width="200" height="200" class="image-card">
+                    <img src="hhello.jpg" alt="" width="200" height="200" class="image-card">
                 </div>
 
                 <div class="card">
@@ -66,6 +66,7 @@
 
  <section id="interactive-map">
     <div class="map-wrapper">
+      <center><h1>Map</h1></center>  
     <div id="map" style="height: 500px;"></div>
 </div>
  </section>
