--- a/index.html
+++ b/index.html
@@ -88,15 +88,6 @@
       </div>
     </section>
 
-    <script>
-      function myFunction() {
-        var x = document.getElementById("menu");
-        if (x.className === "menu") {
-          x.className += " responsive";
-        } else {
-          x.className = "menu";
-        }
-      }
-    </script>
+    <script src="menuToggle.js"></script>
   </body>
 </html>
